[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersentry-saud"
version = "0.2.0"
description = "Developer-first Security Simulator + Defense Engine — 32 OWASP rules, 6 defence layers, 100% detection"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "saudbb8", email = "your@email.com"}
]
keywords = ["security", "owasp", "waf", "sqli", "xss", "cybersecurity", "devsecops", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.7.1",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.1",
    "pydantic-settings>=2.2.1",
    "sqlalchemy>=2.0.30",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.1",
    "packaging>=24.0",
    "tabulate>=0.9.0",
    "jinja2>=3.1.4",
    "starlette>=0.37.0",
]

[project.scripts]
cybersentry = "cybersentry.main:app"
cs = "cybersentry.main:app"

[project.urls]
Homepage = "https://github.com/saudbb8/cybersentry"
Repository = "https://github.com/saudbb8/cybersentry"
"Bug Tracker" = "https://github.com/saudbb8/cybersentry/issues"
